--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<div class="banner">
 		<div class="banneryazi">
 			<div class="banner-sol">
-				<a href="index.html"><img src="logo.png" alt="logo"></a>
+				<a href="index.html"><img src="./images/logo.png" alt="logo"></a>
 			</div>
 			<div class="banner-sag">
-				<a href="https://www.facebook.com/ogul1905" target="_blank"><img src="facebook.png" alt="facebook" class="icon"></a>
-				<a href="https://www.youtube.com/melihogul" target="_blank"><img src="youtube.png" alt="youtube" class="icon"></a>
-				<a href="https://www.instagram.com/melihogul" target="_blank"><img src="instagram.png" alt="instagram" class="icon"></a>
-				<a href="https://www.twitter.com/melihogul" target="_blank"><img src="twitter.png" alt="twitter"class="icon"></a>
-				<a href="https://melihogul.wordpress.com" target="_blank"><img src="wordpress.png" alt="wordpress" class="icon"></a>
+				<a href="https://www.facebook.com/ogul1905" target="_blank"><img src="./images/facebook.png" alt="facebook" class="icon"></a>
+				<a href="https://www.youtube.com/melihogul" target="_blank"><img src="./images/youtube.png" alt="youtube" class="icon"></a>
+				<a href="https://www.instagram.com/melihogul" target="_blank"><img src="./images/instagram.png" alt="instagram" class="icon"></a>
+				<a href="https://www.twitter.com/melihogul" target="_blank"><img src="./images/twitter.png" alt="twitter"class="icon"></a>
+				<a href="https://melihogul.wordpress.com" target="_blank"><img src="./images/wordpress.png" alt="wordpress" class="icon"></a>
 			</div>
 		</div></div>
 
@@ -39,43 +39,43 @@
 	<div class="icerik">
 		<div class="icerik-sol">
 			<div class="makale" data-url="makale1.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale1.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale1.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Apple’dan Iphone’a Şarj Problemi Çözümü</a></div>
 				<div class="makale-yazi">Kullanıcıların pil sorunu şikayetine çareler arayan Apple, Iphone için yeni bir kılıf üretti. Apple yeni kılıfla pil ömrünün yüzde 80 artacağı sözünü veriyor.
 				</div></div>
 
 			<div class="makale" data-url="makale2.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale2.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale2.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizin Trafiğini Arttıracak Etkenler</a></div>
 				<div class="makale-yazi">1- Başlık: Sayfanızın title etiketi arama motorlarının sitenizin konusunu öğrenebilmesi için gereklidir.Arama motorları için title etiketinizin anahtar kelimelerden oluşması, başlığın...
 				</div></div>
 
 			<div class="makale" data-url="makale3.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale3.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale3.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizi Arama Motorları İçin Optimize Edin!</a></div>
 				<div class="makale-yazi">Arama motoru optimizasyonu soğuk bir kış günü nefesinizden çıkan buharı yakalamaya benzer” demiş bir düşünür. Onu görebilirsiniz. Onun var olduğunu bilirsiniz. Ama yakalayamazsınız. Arama motoru...
 				</div></div>
 
 			<div class="makale" data-url="makale4.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale4.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale4.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Windows 8 – 0x80248014 Hatası</a></div>
 				<div class="makale-yazi">Windows Tuşu + R Basın ve “services.msc” yazın. <br><br>En alttaki Windows Update'e...
 				</div></div>
 
 			<div class="makale" data-url="makale5.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale5.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale5.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bu Öğe Bulunamadı Hatası!</a></div>
 				<div class="makale-yazi">1– 'Öğenin konumunu doğrulayıp yeniden deneyin' sorununu veren klasörümüze geliyoruz.<br><br>2- Sağ tuşa tıklayıp : Arşive Ekle tuşuna basıyoruz. (dikkat “Arşive ekle “silinmeyen klasör adı” değil direkt...
 				</div></div>
 
 			<div class="makale" data-url="makale6.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale6.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale6.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bilgisayarda Silinmeyen Dosyaları Silme</a></div>
 				<div class="makale-yazi">Hiç bilgisayarınızdaki bir dosyayı silmeye çalıştığınız zaman Windows, size bu dosyanın kullanımda olduğunu hatırlatıp, dosyanın silinmesini engelledi mi? Veya “Bu öge bulunamadı” hatası geldimi? Bu durumlar...
 				</div></div>
 
 			<div class="makale" data-url="makale7.html">
-				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale7.jpg" class="makale-resim"></a>
+				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale7.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Format Attıktan Sonra Yüklenecek 26 Program</a></div>
 				<div class="makale-yazi">1-Microsof visual c++ redistributable 2012(x64 veya x86 sürümünüze bağlı)(Bu programı kuruyorsunuz ve daha birçok c++ yazılımını kuraca...
 				</div></div>
@@ -113,22 +113,22 @@
 				<div class="etiket-baslik etiket-havuzu">Popüler Makaleler</div>
 
 				<div class="populer-makaleler makale" data-url="makale1.html">
-					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale1.jpg" class="pop-makaleler-resim"></a>
+					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale1.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Apple’dan Iphone’a Şarj Problemi Çözümü</a></div>
 				</div>
 				
 				<div class="populer-makaleler makale" data-url="makale3.html">
-					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale3.jpg" class="pop-makaleler-resim"></a>
+					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale3.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizi Arama Motorları İçin Optimize Edin</a></div>
 				</div>
 
 				<div class="populer-makaleler makale" data-url="makale5.html">
-					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale5.jpg" class="pop-makaleler-resim"></a>
+					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale5.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bu Öğe Bulunamadı Hatası!</a></div>
 				</div>
 
 				<div class="populer-makaleler makale" data-url="makale7.html">
-					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="makale7.jpg" class="pop-makaleler-resim"></a>
+					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale7.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Format Attıktan Sonra Yüklenecek 26 Program</a></div>
 				</div>
 				</div></div></div>
@@ -150,15 +150,15 @@
 			</div>
 			<div class="sosyalmedya">
 				<div class="baslik">Sosyal Medya</div>
-					<a href="https://www.facebook.com/ogul1905" target="_blank"><img src="facebook.png" alt="facebook" class="icon"></a>
-					<a href="https://www.youtube.com/mrogul" target="_blank"><img src="youtube.png" alt="youtube" class="icon"></a>
-					<a href="https://www.instagram.com/melihogul" target="_blank"><img src="instagram.png" alt="instagram" class="icon"></a>
-					<a href="https://www.twitter.com/melihogul" target="_blank"><img src="twitter.png" alt="twitter"class="icon"></a>
-					<a href="https://melihogul.wordpress.com" target="_blank"><img src="wordpress.png" alt="wordpress" class="icon"></a>
+					<a href="https://www.facebook.com/ogul1905" target="_blank"><img src="./images/facebook.png" alt="facebook" class="icon"></a>
+					<a href="https://www.youtube.com/mrogul" target="_blank"><img src="./images/youtube.png" alt="youtube" class="icon"></a>
+					<a href="https://www.instagram.com/melihogul" target="_blank"><img src="./images/instagram.png" alt="instagram" class="icon"></a>
+					<a href="https://www.twitter.com/melihogul" target="_blank"><img src="./images/twitter.png" alt="twitter"class="icon"></a>
+					<a href="https://melihogul.wordpress.com" target="_blank"><img src="./images/wordpress.png" alt="wordpress" class="icon"></a>
 			</div>
 			<div class="sosyalmedya">
 				<div class="baslik">İletişim</div>
-					<img src="mesajkutusu.png" class="mesajkutusu"><div class="iletisimyazi">ogul1905@gmail.com</div>
+					<img src="./images/mesajkutusu.png" class="mesajkutusu"><div class="iletisimyazi">ogul1905@gmail.com</div>
 			</div>
 
 		</div>
@@ -173,7 +173,7 @@
 		<article class="content-wrapper">
 		  <button class="close"></button>
 		  <div class="content">
-			<img src="./loading.gif">
+			<img src="./images/loading.gif">
 		  </div>
 		</article>
 	  </div>
