--- a/makale2.html
+++ b/makale2.html
@@ -1,6 +1,6 @@
 	<div class="">
 		<div class="makale-detay-baslik">Sitenizin Trafiğini Arttıracak Etkenler!</div>
-		<img src="makale2.jpg" class="makale-detay-resim">
+		<img src="./images/makale2.jpg" class="makale-detay-resim">
 		<div class="makale-detay-aciklama">En Önemli Unsur “SEO”
 			<br><br>
 		1-) Title (Başlık): Sayfanızın title etiketi arama motorlarının sitenizin konusunu öğrenebilmesi için gereklidir.Arama motorları için title etiketinizin anahtar kelimelerden oluşması, başlığın site içeriği ile alakalı olması olmazsa olmaz iki unsurdur.Dikkat etmeniz gereken şey başlığınızın 60 karakteri geçmemesi ve sitenizin içeriği ile alakalı olması.
