--- a/makale3.html
+++ b/makale3.html
@@ -1,6 +1,6 @@
 <div class="">
 	<div class="makale-detay-baslik">Sitenizi Arama Motorları İçin Optimize Edin!</div>
-	<img src="makale3.jpg" class="makale-detay-resim">
+	<img src="./images/makale3.jpg" class="makale-detay-resim">
 			<div class="makale-detay-aciklama">“Arama motoru optimizasyonu soğuk bir kış günü nefesinizden çıkan buharı yakalamaya benzer” demiş bir düşünür. Onu görebilirsiniz. Onun var olduğunu bilirsiniz. Ama yakalayamazsınız. Arama motoru optimizasyonunun sonuçlarını görebilir, nasıl yapılması gerektiğini çok iyi bilebilir, her şeyi doğru yaptığınız halde nihai hedefe ulaşamayabilir, arama motorları sonuç sayfalarında istediğiniz yere gelemeyebilirsiniz.
 				<br><br>
 			Elbette her arama sonuç sayfasında en başta olmanız beklenemez. Arama sonuç sayfalarında, sadece ilk sıradaki web sitesine gittiğinizi düşünün. İlk bağlandığımız web sitesinde aradığımız bilgileri tam olarak bulsak da; bunları doğrulama amaçlı ikinci, üçüncü bazen daha fazla web sitesine de bakarız.
