--- a/makale4.html
+++ b/makale4.html
@@ -1,6 +1,6 @@
 <div class="">
 	<div class="makale-detay-baslik">Windows 8 – 0x80248014 Hatası</div>
-	<img src="makale4.jpg" class="makale-detay-resim">
+	<img src="./images/makale4.jpg" class="makale-detay-resim">
 			<div class="makale-detay-aciklama">Windows Tuşu + R Basın ve “services.msc” yazın.
 				<br><br>
 			En alttaki Windows Update'e sağ tıklayıp durdura tıklayın.
