--- a/makale5.html
+++ b/makale5.html
@@ -1,12 +1,12 @@
 <div class="">
 	<div class="makale-detay-baslik">Bu Öğe Bulunamadı Hatası!</div>
-	<img src="makale5.jpg" class="makale-detay-resim">
+	<img src="./images/makale5.jpg" class="makale-detay-resim">
 			<div class="makale-detay-aciklama">1 – 'Öğenin konumunu doğrulayıp yeniden deneyin' sorununu veren klasörümüze geliyoruz.<br><br>
-				<img src="makale5-1.jpg" class="makale-detay-resim"><br><br>
+				<img src="./images/makale5-1.jpg" class="makale-detay-resim"><br><br>
 				2- Sağ tuşa tıklayıp : Arşive Ekle tuşuna basıyoruz. (Dikkat! “Arşive ekle “silinmeyen klasör adı” değil direkt arşive ekle seçeneğine basın.<br><br>
-				<img src="makale5-2.jpg" class="makale-detay-resim"><br><br>
+				<img src="./images/makale5-2.jpg" class="makale-detay-resim"><br><br>
 				3- Karşınıza çıkan ekranda sağ tarafta “Arşivleme Seçenekleri” bölümünde ilk madde “Arşivledikten Sonra Dosyaları Sil” seçeneğine tıklayın.<br><br>
-				<img src="makale5-3.jpg" class="makale-detay-resim">
+				<img src="./images/makale5-3.jpg" class="makale-detay-resim">
 			</div>
 			<div class="makale-detay-kaynak">Kaynak: melihogul.wordpress.com</div>
 			<div class="makale-detay-etiket">Etiketler: html, css, javascript</div>
