--- a/makale6.html
+++ b/makale6.html
@@ -1,6 +1,6 @@
 <div class="">
 	<div class="makale-detay-baslik">Bilgisayarda Silinmeyen Dosyaları Silme!</div>
-	<img src="makale6.jpg" class="makale-detay-resim">
+	<img src="./images/makale6.jpg" class="makale-detay-resim">
 	<div class="makale-detay-aciklama">Hiç bilgisayarınızdaki bir dosyayı silmeye çalıştığınız zaman Windows, size bu dosyanın kullanımda olduğunu hatırlatıp, dosyanın silinmesini engelledi mi? Veya “Bu öge bulunamadı” hatası geldimi? Bu durumlar, hemen her bilgisayar kullanıcısının başına gelmiştir.
 		<br><br>
 	Bu durumun genelde iki sebebi vardır; ya dosyayı gerçekten kullanan bir program vardır ve siz bu programı kapatmayı unutmuşsunuzdur ya da bilgisayarınızda bir virüs vardır ve bu dosyanın silinmesini engelliyordur.
