--- a/makale1.html
+++ b/makale1.html
@@ -1,6 +1,6 @@
 <div class="">
     <div class="makale-detay-baslik">Apple’dan Iphone’a Şarj Problemi Çözümü!</div>
-    <img src="makale1.jpg" class="makale-detay-resim">
+    <img src="./images/makale1.jpg" class="makale-detay-resim">
     <div class="makale-detay-aciklama">Kullanıcıların pil sorunu şikayetine çareler arayan Apple, Iphone için yeni bir kılıf üretti. Apple yeni kılıfla pil ömrünün yüzde 80 artacağı sözünü veriyor.
         <br><br>
     Apple yeni lastik malzemeden yapılma kılıfını satışa sunmaya hazırlanıyor. Firma, Iphone 6S için 14 saat olan konuşma süresinin yeni pil destekli kılıf sayesinde 25 saate çıkacağını söylüyor.
