--- a/makale7.html
+++ b/makale7.html
@@ -1,6 +1,6 @@
 <div class="">
 	<div class="makale-detay-baslik">Format Attıktan Sonra Yüklenecek 26 Program!</div>
-	<img src="makale7.jpg" class="makale-detay-resim">
+	<img src="./images/makale7.jpg" class="makale-detay-resim">
 	<div class="makale-detay-aciklama">1-Microsof visual c++ redistributable 2012(x64 veya x86 sürümünüze bağlı)(Bu programı kuruyorsunuz ve daha birçok c++ yazılımını kuracağız)
 		<br><br>
 	http://www.microsoft.com/en-us/download/details.aspx?id=30679
