--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
 	
 	<div class="icerik">
 		<div class="icerik-sol">
-			<div class="makale" data-url="makale1.html">
+			<div class="makale" data-url="./makale/makale1.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale1.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Apple’dan Iphone’a Şarj Problemi Çözümü</a></div>
 				<div class="makale-yazi">Kullanıcıların pil sorunu şikayetine çareler arayan Apple, Iphone için yeni bir kılıf üretti. Apple yeni kılıfla pil ömrünün yüzde 80 artacağı sözünü veriyor.
 				</div></div>
 
-			<div class="makale" data-url="makale2.html">
+			<div class="makale" data-url="./makale/makale2.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale2.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizin Trafiğini Arttıracak Etkenler</a></div>
 				<div class="makale-yazi">1- Başlık: Sayfanızın title etiketi arama motorlarının sitenizin konusunu öğrenebilmesi için gereklidir.Arama motorları için title etiketinizin anahtar kelimelerden oluşması, başlığın...
 				</div></div>
 
-			<div class="makale" data-url="makale3.html">
+			<div class="makale" data-url="./makale/makale3.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale3.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizi Arama Motorları İçin Optimize Edin!</a></div>
 				<div class="makale-yazi">Arama motoru optimizasyonu soğuk bir kış günü nefesinizden çıkan buharı yakalamaya benzer” demiş bir düşünür. Onu görebilirsiniz. Onun var olduğunu bilirsiniz. Ama yakalayamazsınız. Arama motoru...
 				</div></div>
 
-			<div class="makale" data-url="makale4.html">
+			<div class="makale" data-url="./makale/makale4.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale4.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Windows 8 – 0x80248014 Hatası</a></div>
 				<div class="makale-yazi">Windows Tuşu + R Basın ve “services.msc” yazın. <br><br>En alttaki Windows Update'e...
 				</div></div>
 
-			<div class="makale" data-url="makale5.html">
+			<div class="makale" data-url="./makale/makale5.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale5.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bu Öğe Bulunamadı Hatası!</a></div>
 				<div class="makale-yazi">1– 'Öğenin konumunu doğrulayıp yeniden deneyin' sorununu veren klasörümüze geliyoruz.<br><br>2- Sağ tuşa tıklayıp : Arşive Ekle tuşuna basıyoruz. (dikkat “Arşive ekle “silinmeyen klasör adı” değil direkt...
 				</div></div>
 
-			<div class="makale" data-url="makale6.html">
+			<div class="makale" data-url="./makale/makale6.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale6.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bilgisayarda Silinmeyen Dosyaları Silme</a></div>
 				<div class="makale-yazi">Hiç bilgisayarınızdaki bir dosyayı silmeye çalıştığınız zaman Windows, size bu dosyanın kullanımda olduğunu hatırlatıp, dosyanın silinmesini engelledi mi? Veya “Bu öge bulunamadı” hatası geldimi? Bu durumlar...
 				</div></div>
 
-			<div class="makale" data-url="makale7.html">
+			<div class="makale" data-url="./makale/makale7.html">
 				<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale7.jpg" class="makale-resim"></a>
 				<div class="makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Format Attıktan Sonra Yüklenecek 26 Program</a></div>
 				<div class="makale-yazi">1-Microsof visual c++ redistributable 2012(x64 veya x86 sürümünüze bağlı)(Bu programı kuruyorsunuz ve daha birçok c++ yazılımını kuraca...
@@ -112,22 +112,22 @@
 			</div>
 				<div class="etiket-baslik etiket-havuzu">Popüler Makaleler</div>
 
-				<div class="populer-makaleler makale" data-url="makale1.html">
+				<div class="populer-makaleler makale" data-url="./makale/makale1.html">
 					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale1.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Apple’dan Iphone’a Şarj Problemi Çözümü</a></div>
 				</div>
 				
-				<div class="populer-makaleler makale" data-url="makale3.html">
+				<div class="populer-makaleler makale" data-url="./makale/makale3.html">
 					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale3.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Sitenizi Arama Motorları İçin Optimize Edin</a></div>
 				</div>
 
-				<div class="populer-makaleler makale" data-url="makale5.html">
+				<div class="populer-makaleler makale" data-url="./makale/makale5.html">
 					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale5.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Bu Öğe Bulunamadı Hatası!</a></div>
 				</div>
 
-				<div class="populer-makaleler makale" data-url="makale7.html">
+				<div class="populer-makaleler makale" data-url="./makale/makale7.html">
 					<a href="javascript:;" class="trigger" data-modal-trigger="trigger-1"><img src="./images/makale7.jpg" class="pop-makaleler-resim"></a>
 					<a href="makale1.html"><div class="pop-makale-baslik"><a href="javascript:;" class="trigger" data-modal-trigger="trigger-1">Format Attıktan Sonra Yüklenecek 26 Program</a></div>
 				</div>
