--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	</div>
 	<div class="footeralt">
 		<p>Telif Hakkı © 2021. Tüm hakları saklıdır. <a href="https://www.instagram.com/melihogul" target="_blank">Melih Oğul</a> tarafından tasarlandı.</p>
-		<a href="index.html"><p class="anasayfafoot">↑ Anasayfa</p></a>
+		<a href="#"><p class="anasayfafoot">↑ Anasayfa</p></a>
 	</div>
 
 
