--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="banner">
 		<div class="banneryazi">
 			<div class="banner-sol">
-				<a href="index.html"><img src="./images/logo.png" alt="logo"></a>
+				<a href="javascript:;"><img src="./images/logo.png" alt="logo"></a>
 			</div>
 			<div class="banner-sag">
 				<a href="https://www.facebook.com/ogul1905" target="_blank"><img src="./images/facebook.png" alt="facebook" class="icon"></a>
